--- a/index.html
+++ b/index.html
@@ -12,11 +12,28 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-
+    <!-- ESTILOS -->
+    <link rel="stylesheet" href="./src/styles/globalStyles.css">
+    <link rel="stylesheet" href="./src/styles/index.css">
     <title>Git Search</title>
   </head>
   <body>
-
+    <main class="main__container">
+      <section class="aside__container">
+        <div class="aside__content">
+          <h1 class="title__one">Git Search</h1>
+          <span class="aside__span">Encontre e se conecte com profissionais de forma rápida e fácil</span>
+        </div>
+      </section>
+      <section class="search__container">
+        <form class="search__form">
+          <h2 class="title__two">Procurar por um usuário</h2>
+          <span class="search__span">Usuário github</span>
+          <input class="search__input" type="text" placeholder="Digite um usuário do github aqui...">
+          <button class="search__button">Ver perfil do github</button>
+        </form>
+      </section>
+    </main>
     <script type="module" src="./src/scripts/index.js"></script>
   </body>
 </html>
