--- a/src/pages/error.html
+++ b/src/pages/error.html
@@ -12,11 +12,21 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <!-- Styles -->
+    <link rel="stylesheet" href="../styles/globalStyles.css">
+    <link rel="stylesheet" href="../styles/error.css">
 
     <title>Git Search - User Not Found</title>
   </head>
   <body>
-
+    <h1>Pagina de erro</h1>
+    <h1>Pagina de erro</h1>
+    <h1>Pagina de erro</h1>
+    <h1>Pagina de erro</h1>
+    <h1>Pagina de erro</h1>
+    <h1>Pagina de erro</h1>
+    <h1>Pagina de erro</h1>
+    <h1>Pagina de erro</h1>
     <script type="module" src="../scripts/error.js"></script>
   </body>
 </html>
