--- a/src/pages/error.html
+++ b/src/pages/error.html
@@ -19,14 +19,18 @@
     <title>Git Search - User Not Found</title>
   </head>
   <body>
-    <h1>Pagina de erro</h1>
-    <h1>Pagina de erro</h1>
-    <h1>Pagina de erro</h1>
-    <h1>Pagina de erro</h1>
-    <h1>Pagina de erro</h1>
-    <h1>Pagina de erro</h1>
-    <h1>Pagina de erro</h1>
-    <h1>Pagina de erro</h1>
+    <main class="main__error">
+      <div class="error__message">
+        <h1 class="message__title">Ooops!</h1>
+        <span class="message__content">
+          Não encontramos o usuário que você procurou. Vamos tentar novamente.
+        </span>
+        <button class="message__button">Nova Busca</button>
+      </div>
+      <figure>
+        <img class="error__image" src="../img/Group 102.svg" alt="">
+      </figure>
+    </main>
     <script type="module" src="../scripts/error.js"></script>
   </body>
 </html>
