--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     <main class="main__container">
       <section class="aside__container">
         <div class="aside__content">
-          <h1 class="title__one">Git Search</h1>
-          <span class="aside__span">Encontre e se conecte com profissionais de forma rápida e fácil</span>
+          <h1 class="aside__content-title">Git Search</h1>
+          <h3 class="aside__content-subtitle">Encontre e se conecte com profissionais de forma rápida e fácil</h3>
         </div>
       </section>
       <section class="search__container">
         <form class="search__form">
-          <h2 class="title__two">Procurar por um usuário</h2>
-          <span class="search__span">Usuário github</span>
-          <input class="search__input" type="text" placeholder="Digite um usuário do github aqui...">
-          <button class="search__button">Ver perfil do github</button>
+          <h2 class="search__form-title">Procurar por um usuário</h2>
+          <span class="search__form-span">Usuário github</span>
+          <input class="search__form-input" type="text" placeholder="Digite um usuário do github aqui...">
+          <button class="search__form-button">Ver perfil do github</button>
         </form>
       </section>
     </main>
